# drowned-god

./: .gitignore  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml
bw-probe/: Cargo.toml  build.rs
bw-probe/src/: main.rs
bw-probe/src/shaders/: copy.comp  triad.comp
scripts/: dg-mode  phase3-bench.sh  specdec_harness.py
systemd/: agent-brick.target  drowned-god-tui.service  llama-qwen-8b.service  llama-qwen36-27b.service  openclaw-gateway.service
tui/: Cargo.toml
tui/src/: chat.rs  corners.rs  main.rs  palette.rs  telemetry.rs
