[package]
name = "drowned-god"
version = "0.1.0"
edition = "2021"
description = "Drowned God TUI — Alienware-mothership cockpit for local-LLM agent rig"

[[bin]]
name = "drowned-god"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
anyhow = "1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
